[APEX-W3]: Feat add restock alerts count endpoint
